--- a/site/templates/twig/code-tables/list.twig
+++ b/site/templates/twig/code-tables/list.twig
@@ -39,7 +39,7 @@
 			<div class="col-sm-6">
 				Description
 			</div>
-			<div class="col-sm-3">
+			<div class="col-sm-3 text-center">
 				{% if page.is_print() == false %}
 					<button type="button" class="btn btn-light btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-code="" data-description="">
 						<i class="fa fa-plus" aria-hidden="true"></i> Add Code
