--- a/site/templates/twig/code-tables/min/spit/js/classes/Requests.js.twig
+++ b/site/templates/twig/code-tables/min/spit/js/classes/Requests.js.twig
@@ -1,9 +1,9 @@
-class IasmRequests {
+class SpitRequests {
 	static instance = null;
 
 	static getInstance() {
 		if (this.instance === null) {
-			this.instance = new IasmRequests();
+			this.instance = new SpitRequests();
 		}
 		return this.instance;
 	}
