--- a/site/templates/twig/code-tables/min/umm/form.twig
+++ b/site/templates/twig/code-tables/min/umm/form.twig
@@ -1,37 +1,61 @@
-{# umm is an instance of UnitofMeasureSale #}
-<form action="{{ page.url }}" method="POST" id="code-edit-form" data-code="">
-	<input type="hidden" name="table" value="umm">
-	<input type="hidden" name="serialized" value="" disabled>
+{# mfcm is an instance of MotorFreightCode #}
+<form action="{{ input.paginateUrl(1) }}" method="POST" id="code-form" data-code="">
+	<input type="hidden" name="action" value="update">
 
 	<div class="form-group">
 		<label for="code">Code</label>
-		<input type="text" name="code" class="form-control" maxlength="{{ max_length_code }}" value="" id="code">
+		<input type="text" name="code" class="form-control form-control-sm" maxlength="{{ manager.fieldAttribute('code', 'maxlength') }}" id="code">
 	</div>
 
 	<div class="form-group">
 		<label for="description">Description</label>
-		<input type="text" name="description" class="form-control" maxlength="20" value="" id="description">
+		<input type="text" name="description" class="form-control form-control-sm" maxlength="{{ manager.fieldAttribute('description', 'maxlength') }}" id="description">
 	</div>
 
 	<div class="form-group">
-		<label for="conversion">Conversion Factor</label>
-		<input type="text" name="conversion" class="form-control" value="" id="conversion">
+		<label for="conversion">Conversion</label>
+		{% include 'util/bootstrap/form/input.twig' with {
+				'input': {
+					'name': 'conversion',
+					'type': 'number',
+					'value': 1.00,
+					'addclasses': ['text-right'],
+					'attributes': {
+						'aria-label':  'Conversion',
+						'precision': manager.fieldAttribute('conversion', 'precision')
+					}
+				}
+			}
+		%}
 	</div>
 
 	<div class="form-group">
-		<label for="pricebyweight">Price by Weight</label>
-		{% include 'util/select.twig' with {'name': 'pricebyweight', 'id': 'pricebyweight', 'hideblankoption' : 'true', 'options': {'S': 'Standard Weight', 'C': 'Catch Weight', 'N': 'Neither'}} %}
+		<label for="pricebyweight">Price By Weight</label>
+		{% include 'util/bootstrap/form/select-simple.twig' with {
+				'select': {
+					'name': 'pricebyweight',
+					'value' : manager.fieldAttribute('pricebyweight', 'default'),
+					'haskeys': true,
+					'options': {'Y': 'Yes', 'N': 'No'}
+				}
+			}
+		%}
 	</div>
 
 	<div class="form-group">
 		<label for="stockbycase">Stock By Case</label>
-		<select name="stockbycase" class="form-control select-group" id="stockbycase">
-			<option value="N">No</option>
-			<option value="Y">Yes</option>
-		</select>
+		{% include 'util/bootstrap/form/select-simple.twig' with {
+				'select': {
+					'name': 'stockbycase',
+					'value' : manager.fieldAttribute('stockbycase', 'default'),
+					'haskeys': true,
+					'options': {'Y': 'Yes', 'N': 'No'}
+				}
+			}
+		%}
 	</div>
 
-	<div class="d-flex justify-content-between align-items-center mb-3">
+	<div class="d-flex justify-content-between align-items-center">
 		<button type="submit" class="btn btn-success form_button">
 			<i class="fa fa-floppy-o" aria-hidden="true"></i> Save
 		</button>
