TWIG: update js

--- a/site/templates/twig/code-tables/min/spit/.js.twig
+++ b/site/templates/twig/code-tables/min/spit/.js.twig
@@ -12,10 +12,10 @@ $(function() {
 		var button = $(event.relatedTarget); // Button that triggered the modal
 		var modal  = $(this);
 		var code   = button.data('code');
+		modal.find('.modal-title').text('Add Code');
+
 		if (code) {
 			modal.find('.modal-title').text('Edit Code ' + code);
-		} else {
-			modal.find('.modal-title').text('Add Code');
 		}
 		formCode.updateInputsFromJson(button.data('json'));
 	});
@@ -108,13 +108,15 @@ $(function() {
 					}
 
 					alert.codeExists(code, function(editCode) {
-						if (editCode) {
-							var modal = formCode.form.closest('.modal');
+						var modal = formCode.form.closest('.modal');
 
+						if (editCode) {
 							server.getCode(code, function(response) {
 								if (response) {
 									modal.find('.modal-title').text('Edit Code ' + code);
 									formCode.updateInputsFromJson(response);
+								} else {
+									modal.modal('hide');
 								}
 							});
 						} else {
