--- a/site/templates/twig/code-tables/map/vtm/.js.twig
+++ b/site/templates/twig/code-tables/map/vtm/.js.twig
@@ -12,12 +12,11 @@ $(function() {
 		var button = $(event.relatedTarget); // Button that triggered the modal
 		var modal  = $(this);
 		var code   = button.data('code');
+		modal.find('.modal-title').text('Add Code');
+
 		if (code) {
 			modal.find('.modal-title').text('Edit Code ' + code);
-		} else {
-			modal.find('.modal-title').text('Add Code');
 		}
-		console.log(button.data('json'));
 		formCode.updateInputsFromJson(button.data('json'));
 	});
 
@@ -109,21 +108,19 @@ $(function() {
 					}
 
 					alert.codeExists(code, function(editCode) {
-						if (editCode) {
-							var modal = formCode.form.closest('.modal');
+						var modal = formCode.form.closest('.modal');
 
-							if (editCode) {
-								server.getCode(code, function(response) {
-									if (response) {
-										modal.find('.modal-title').text('Edit Code ' + code);
-										formCode.updateInputsFromJson(response);
-									}
-								});
-							} else {
-								modal.modal('hide');
-							}
+						if (editCode) {
+							server.getCode(code, function(response) {
+								if (response) {
+									modal.find('.modal-title').text('Edit Code ' + code);
+									formCode.updateInputsFromJson(response);
+								} else {
+									modal.modal('hide');
+								}
+							});
 						} else {
-							form.submit();
+							modal.modal('hide');
 						}
 					});
 				});
@@ -143,7 +140,7 @@ $(function() {
 		form.find('.valid-feedback').remove();
 
 		if (form.attr('data-code')) {
-			$('#code-table-alert').remove();
+			$('.code-table-alert').remove();
 			$('.bg-success').removeClass('bg-success text-white');
 			$('.highlight').removeClass('highlight');
 			$('.code[data-code="'+form.attr('data-code')+'"]').addClass('highlight');
