--- a/site/templates/twig/code-tables/mso/rgasc/.js.twig
+++ b/site/templates/twig/code-tables/mso/rgasc/.js.twig
@@ -200,7 +200,7 @@ $(function() {
 		form.find('.valid-feedback').remove();
 
 		if (form.attr('data-code')) {
-			$('#code-table-alert').remove();
+			$('.code-table-alert').remove();
 			$('.bg-success').removeClass('bg-success text-white');
 			$('.highlight').removeClass('highlight');
 			$('.code[data-code="'+form.attr('data-code')+'"]').addClass('highlight');
