--- a/site/templates/twig/code-tables/mgl/ttm/.js.twig
+++ b/site/templates/twig/code-tables/mgl/ttm/.js.twig
@@ -12,10 +12,10 @@ $(function() {
 		var button = $(event.relatedTarget); // Button that triggered the modal
 		var modal  = $(this);
 		var code   = button.data('code');
+		modal.find('.modal-title').text('Add Code');
+
 		if (code) {
 			modal.find('.modal-title').text('Edit Code ' + code);
-		} else {
-			modal.find('.modal-title').text('Add Code');
 		}
 		formCode.updateInputsFromJson(button.data('json'));
 	});
@@ -151,7 +151,7 @@ $(function() {
 		form.find('.valid-feedback').remove();
 
 		if (form.attr('data-code')) {
-			$('#code-table-alert').remove();
+			$('.code-table-alert').remove();
 			$('.bg-success').removeClass('bg-success text-white');
 			$('.highlight').removeClass('highlight');
 			$('.code[data-code="'+form.attr('data-code')+'"]').addClass('highlight');
