--- a/site/templates/twig/code-tables/mpm/rcm/.js.twig
+++ b/site/templates/twig/code-tables/mpm/rcm/.js.twig
@@ -13,8 +13,8 @@ $(function() {
 		var button = $(event.relatedTarget); // Button that triggered the modal
 		var modal  = $(this);
 		var code   = button.data('code');
-
 		modal.find('.modal-title').text('Add Code');
+
 		if (code) {
 			modal.find('.modal-title').text('Edit Code ' + code);
 		}
@@ -42,7 +42,7 @@ $(function() {
 		form.find('.valid-feedback').remove();
 
 		if (form.attr('data-code')) {
-			$('#code-table-alert').remove();
+			$('.code-table-alert').remove();
 			$('.bg-success').removeClass('bg-success text-white');
 			$('.highlight').removeClass('highlight');
 			$('.code[data-code="'+form.attr('data-code')+'"]').addClass('highlight');
@@ -57,19 +57,19 @@ $(function() {
 		server.validateCode(code, function(exists) {
 			if (exists === true) {
 				alert.codeExists(code, function(editCode) {
-					if (editCode) {
-						var modal = input.closest('.modal');
+					var modal = formCode.form.closest('.modal');
 
-						if (editCode) {
-							server.getCode(code, function(response) {
-								if (response) {
-									modal.find('.modal-title').text('Edit Code ' + code);
-									formCode.updateInputsFromJson(response);
-								}
-							});
-						} else {
-							modal.modal('hide');
-						}
+					if (editCode) {
+						server.getCode(code, function(response) {
+							if (response) {
+								modal.find('.modal-title').text('Edit Code ' + code);
+								formCode.updateInputsFromJson(response);
+							} else {
+								modal.modal('hide');
+							}
+						});
+					} else {
+						modal.modal('hide');
 					}
 				});
 			}
@@ -157,21 +157,19 @@ $(function() {
 					}
 
 					alert.codeExists(code, function(editCode) {
-						if (editCode) {
-							var modal = formCode.form.closest('.modal');
+						var modal = formCode.form.closest('.modal');
 
-							if (editCode) {
-								server.getCode(code, function(response) {
-									if (response) {
-										modal.find('.modal-title').text('Edit Code ' + code);
-										formCode.updateInputsFromJson(response);
-									}
-								});
-							} else {
-								modal.modal('hide');
-							}
+						if (editCode) {
+							server.getCode(code, function(response) {
+								if (response) {
+									modal.find('.modal-title').text('Edit Code ' + code);
+									formCode.updateInputsFromJson(response);
+								} else {
+									modal.modal('hide');
+								}
+							});
 						} else {
-							form.submit();
+							modal.modal('hide');
 						}
 					});
 				});
