--- a/site/templates/twig/code-tables/mso/rgasc/.js.twig
+++ b/site/templates/twig/code-tables/mso/rgasc/.js.twig
@@ -161,7 +161,7 @@ $(function() {
 				form.submit();
 			} else {
 				server.validateCode(code, function(exists) {
-					var alert = RgascAlerts.getInstance();
+					var alert = CodeAlerts.getInstance();
 					if (exists === false) {
 						form.submit();
 						return true;
