--- a/site/templates/twig/code-tables/min/msdsm/.js.twig
+++ b/site/templates/twig/code-tables/min/msdsm/.js.twig
@@ -148,7 +148,7 @@ $(function() {
 				form.submit();
 			} else {
 				server.validateCode(code, function(exists) {
-					var alert = MsdsmAlerts.getInstance();
+					var alert = CodeAlerts.getInstance();
 					if (exists === false) {
 						form.submit();
 						return true;
