--- a/site/templates/twig/code-tables/edit-code-modal.twig
+++ b/site/templates/twig/code-tables/edit-code-modal.twig
@@ -1,6 +1,6 @@
 <!-- Modal -->
 <div class="modal fade" id="edit-code-modal" tabindex="-1" role="dialog" aria-labelledby="edit-code-modal-title" aria-hidden="true">
-	<div class="modal-dialog" role="document">
+	<div class="modal-dialog {{ size ? 'modal-' ~ size : '' }}" role="document">
 		<div class="modal-content">
 			<div class="modal-header">
 				<h5 class="modal-title" id="edit-code-modal-title">Modal title</h5>
