--- a/site/templates/twig/code-tables/min/msdsm/form.twig
+++ b/site/templates/twig/code-tables/min/msdsm/form.twig
@@ -18,7 +18,7 @@
 				'inputgroup': {
 					'input': {
 						'name': 'effectivedate',
-						'value': person.effectivedate ? person.effectivedate|convertdate : '',
+						'value': '',
 						'attributes': {
 							'placeholder': '',
 							'aria-label':  'Effective Date'
