--- a/site/templates/twig/code-tables/min/tarm/form.twig
+++ b/site/templates/twig/code-tables/min/tarm/form.twig
@@ -1,67 +1,77 @@
-{# tarm is an instance of TariffCode #}
-<form action="{{ page.url }}" method="POST" id="code-edit-form" data-code="{{ tariff.code }}">
-	<input type="hidden" name="action" value="update-tarm">
-	<input type="hidden" name="table" value="tarm">
+{# vtm is an instance of ApTypeCode #}
+<form action="{{ input.paginateUrl(1) }}" method="POST" id="code-form" data-code="">
+	<input type="hidden" name="action" value="update">
+
 	<div class="row">
 		<div class="col-sm-6">
 			<div class="form-group">
 				<label for="code">Code</label>
-				<input type="text" name="code" class="form-control" maxlength="{{ tariff.get_max_code_length() }}" value="{{ tariff.code }}" id="code" {{ tariff.code ? 'readonly' : 'autofocus' }}>
-			</div>
-
-			<div class="form-group">
-				<label for="number">Tariff Number</label>
-				<input type="text" name="number" class="form-control" maxlength="12" value="{{ tariff.number }}" id="number" autofocus>
+				<input type="text" name="code" class="form-control form-control-sm" maxlength="{{ manager.fieldAttribute('code', 'maxlength') }}" id="code">
 			</div>
 
 			<div class="form-group">
 				<label for="description">Description</label>
-				<input type="text" name="description" class="form-control" maxlength="30" value="{{ tariff.description }}" id="description">
+				<input type="text" name="description" class="form-control form-control-sm" maxlength="{{ manager.fieldAttribute('description', 'maxlength') }}" id="description">
 			</div>
 
 			<div class="form-group">
-				<label for="duty_rate">Tariff Percent</label>
-				<input type="text" name="duty_rate" class="form-control" value="{{ tariff.duty_rate }}" id="duty_rate">
+				<label for="number">Tariff Number</label>
+				{% include 'util/bootstrap/form/input.twig' with {
+						'input': {
+							'name': 'number',
+							'size': 'sm',
+							'attributes': {
+								'placeholder': '',
+								'aria-label':  'Number',
+								'maxlength': manager.fieldAttribute('number', 'maxlength')
+							}
+						}
+					}
+				%}
+			</div>
+
+			<div class="form-group">
+				<label for="percent">Tariff Percent</label>
+				{% include 'util/bootstrap/form/input.twig' with {
+						'input': {
+							'name': 'percent',
+							'type': 'number',
+							'size': 'sm',
+							'addclasses': ['text-right'],
+							'attributes': {
+								'placeholder': '',
+								'aria-label':  'Percent'
+							}
+						}
+					}
+				%}
 			</div>
 		</div>
 		<div class="col-sm-6">
-			<div class="form-group">
-				<label>Number of Countries Tariff Applies to</label>
-				<input type="text" class="form-control-plaintext" value="{{ tariff.count_countries() }}" readonly>
-			</div>
+			<legend>Countries</legend>
 
 			<div class="form-group country">
 				<label>Countries</label>
 				<div style="overflow-y:scroll; height: 195px">
-					{% for country in countries %}
+					{% for country in manager.countriesM.getAllCountryCodes() %}
 						<div class="custom-control custom-checkbox">
-							<input type="checkbox" class="custom-control-input country-checkbox" name="country[]" value="{{ country.code }}" id="{{ country.code }}" {{ tariff.applies_to_country(country.code) ? 'checked' : '' }} {{ tariff.code ? '' : 'disabled' }}>
-							<label class="custom-control-label" for="{{ country.code }}">{{ country.description }}</label>
+							<input type="checkbox" class="custom-control-input country-checkbox" name="country[]" value="{{ country.code }}" id="{{ country.code }}">
+							<label class="custom-control-label" for="{{ country.code }}">
+								{{ country.description }}
+							</label>
 						</div>
 					{% endfor %}
 				</div>
 			</div>
 		</div>
 	</div>
+
 	<div class="d-flex justify-content-between align-items-center">
-		{#
-			Only show Edit Actions if the code is
-			1. Locked for editing by the User
-			2. Is a new code
-			NOTE: Only show delete if code already exists.
-		#}
-		{% if recordlocker.function_locked_by_user(page.codetable, tariff.code) or tariff.isNew() %}
-			<button type="submit" class="btn btn-success form_button">
-				<i class="fa fa-floppy-o" aria-hidden="true"></i> Save
-			</button>
-			{% if tariff.isNew() == false %}
-				<a href="{{ page.get_codetable_code_deleteURL(page.codetable, tariff.code) }}" class="btn btn-danger form_button delete_button">
-					<i class="fa fa-trash-o" aria-hidden="true"></i> Delete
-				</a>
-			{% endif %}
-		{% endif %}
-		<a href="{{ page.get_codetable_listURL(page.codetable, tariff.code) }}" class="btn btn-warning pull-right">
+		<button type="submit" class="btn btn-success form_button">
+			<i class="fa fa-floppy-o" aria-hidden="true"></i> Save
+		</button>
+		<button type="button" class="btn btn-warning" data-dismiss="modal">
 			<i class="fa fa-times" aria-hidden="true"></i> Close
-		</a>
+		</button>
 	</div>
 </form>
