--- a/site/templates/twig/code-tables/min/iwhm/list.twig
+++ b/site/templates/twig/code-tables/min/iwhm/list.twig
@@ -1,46 +1,70 @@
-<div class="list-group">
+{#
+	var                    Description / Instance of
+	-------------------------------------------------
+	page                   ProcessWire\Page
+	manager                Dplus\Codes\Base
+#}
+{% set response = manager.getResponse() %}
+{% set values = input.get %}
+
+
+<div class="mb-3">
+	{% if page.is_print() %}
+		<button onclick="window.history.back();" class="btn btn-primary d-print-none">
+			<i class="fa fa-undo" aria-hidden="true"></i> Back
+		</button>
+		&nbsp;
+		<button class="btn btn-primary d-print-none" onclick="window.print();return false;">
+			<i class="fa fa-print" aria-hidden="true"></i> Print
+		</button>
+	{% else %}
+		<a href="{{ page.menuUrl() }}" class="btn btn-primary">
+			<i class="fa fa-undo" aria-hidden="true"></i> Back to {{ page.menuTitle() }}
+		</a>
+		&nbsp;
+		<a href="{{ page.get_printURL() }}" class="btn btn-primary">
+			<i class="fa fa-print" aria-hidden="true"></i> View Printable
+		</a>
+	{% endif %}
+</div>
+
+<div class="list-group codes-list mb-3">
 	<div class="list-group-item bg-dark text-white">
 		<div class="row align-items-center">
-			<div class="col-3">
+			<div class="col-sm-3">
 				Code
 			</div>
-			<div class="col-7">
+			<div class="col-sm-6">
 				Name
 			</div>
-			<div class="col-2">
+			<div class="col-sm-3 text-center">
 				{% if page.is_print() == false %}
-					<a href="{{ page.url ~ '?code=new' }}" class="btn btn-light">
-						<i class="fa fa-plus" aria-hidden="true"></i> Add Whse
+					<a href="{{ page.codeAddUrl() }}" class="btn btn-light btn-sm">
+						<i class="fa fa-plus" aria-hidden="true"></i> Add Warehouse
 					</a>
 				{% endif %}
 			</div>
 		</div>
 	</div>
-	{% for warehouse in warehouses %}
+	{% for code in codes %}
 		{# data-code attribute and class code is for the highlight on close #}
-		<div id="{{ warehouse.id|urlencode }}" data-code="{{ warehouse.id|urlencode }}" class="list-group-item code pb-1 pt-1 {{ (response.key == warehouse.id and response.has_success() ) ? 'bg-success text-white' : ''}}">
+		<div id="code-{{ code.code|urlencode }}" data-code="{{ code.code }}" class="list-group-item code pb-1 pt-1 {{ (response.key == code.code and response.hasSuccess() ) ? 'bg-success text-white' : ''}}">
 			<div class="row align-items-center">
-				<div class="col-3">
-					{{ warehouse.id }}
+				<div class="col-sm-3">
+					{{ code.code }}
 				</div>
-				<div class="col-6">
-					{{ warehouse.name }}
+				<div class="col-sm-6">
+					{{ code.name }}
 				</div>
-				<div class="col-3 text-center">
-					{% if recordlocker.function_locked(page.name, warehouse.id) == false or recordlocker.function_locked_by_user(page.name, warehouse.id) %}
-						{% if page.is_print() == false %}
-							<a href="{{ page.get_codetable_code_editURL(page.codetable, warehouse.id) }}" class="btn btn-warning btn-sm">
-								<i class="fa fa-pencil" aria-hidden="true"></i> Edit
-							</a>
-							&nbsp;
-							<a href="{{ page.get_codetable_code_deleteURL(page.codetable, warehouse.id) }}" class="btn btn-danger btn-sm delete_button">
-								<i class="fa fa-trash" aria-hidden="true"></i> Delete
-							</a>
-						{% endif %}
-					{% else %}
-						<span class="badge badge-secondary">
-							<i class="fa fa-lock" aria-hidden="true"></i> Warehouse Locked By {{ recordlocker.get_locked_user(page.name, warehouse.id) }}
-						</span>
+				<div class="col-sm-3 text-center">
+					{% if page.is_print() == false %}
+						<a href="{{ page.codeEditUrl(code.code) }}" class="btn btn-warning btn-sm">
+							<i class="fa fa-pencil" aria-hidden="true"></i> Edit
+						</a>
+						&nbsp;
+						<a href="{{ page.codeDeleteUrl(code.code) }}" class="btn btn-danger btn-sm delete_button">
+							<i class="fa fa-trash" aria-hidden="true"></i> Delete
+						</a>
 					{% endif %}
 				</div>
 			</div>
