Route I2i through inmain

--- a/site/templates/twig/min/i2i/bread-crumbs.twig
+++ b/site/templates/twig/min/i2i/bread-crumbs.twig
@@ -3,14 +3,20 @@
 {% set values = input.get %}
 
 {% block current_page %}
+	<li class="breadcrumb-item">
+		<a href="{{ page.menuUrl() }}">
+			INMAIN
+		</a>
+	</li>
+
 	{% if values.offsetExists('parentID') and values.text('parentID') != 'new' %}
 		<li class="breadcrumb-item">
 			<a href="{{ page.xrefListFocusUrl(values.text('parentID'), values.text('childID')) }}">
-				{{ page.has('dplus_function') ? page.dplus_function|upper : page.title }}
+				ITMP
 			</a>
 		</li>
 		<li class="breadcrumb-item active" aria-current="page">{{ [values.text('parentID'), values.text('childID')]|join('-') }}</li>
 	{% else %}
-		<li class="breadcrumb-item active" aria-current="page">{{ page.title }}</li>
+		<li class="breadcrumb-item active" aria-current="page">ITMP</li>
 	{% endif %}
 {% endblock %}
