--- a/site/templates/twig/min/itmp/list.twig
+++ b/site/templates/twig/min/itmp/list.twig
@@ -4,7 +4,7 @@
 	page                   ProcessWire\Page
 	itmp                   module Itmp
 #}
-{% set response = itmp.response() %}
+{% set response = itmp.getResponse() %}
 <div class="list-group">
 	<div class="list-group-item bg-dark text-white">
 		<div class="row align-items-center">
