--- a/site/templates/twig/customers/ci/open-invoices/open-invoices.twig
+++ b/site/templates/twig/customers/ci/open-invoices/open-invoices.twig
@@ -1,3 +1,4 @@
+{{ dump(docm) }}
 <table class="table table-striped table-bordered table-condensed table-excel" id="invoices">
 	<thead>
 		{% include 'util/screen-formatter/tr-labels.twig' with {'section': 'detail'} %}
