--- a/site/templates/twig/mki/kim/form-create.twig
+++ b/site/templates/twig/mki/kim/form-create.twig
@@ -11,7 +11,7 @@
 				'modaltarget': '#ajax-modal', 'modaldescription': 'Search for / Choose Item',
 				'attributes_button': {
 					'data-search': 'item',
-					'data-lookupurl': page.search_lookupURL('items')
+					'data-lookupurl': page.searchLookupUrl('items')
 				}
 			}
 		%}
