--- a/site/templates/twig/mki/kim/list.twig
+++ b/site/templates/twig/mki/kim/list.twig
@@ -12,7 +12,7 @@
 			<th class="pt-3 pb-3 align-middle">Description</th>
 			<th class="pt-3 pb-3 align-middle"># of Items</th>
 			<th class="pt-3 pb-3 text-center">
-				<button type="button" class="btn btn-light btn-sm" data-toggle="modal" data-target="#create-kit-modal" title="Choose Customer to Add CXM" aria-label="Choose Customer to Add CXM" data-custid="{{ page.has('custID') ? page.custID : '' }}" data-search="customers">
+				<button type="button" class="btn btn-light btn-sm" data-toggle="modal" data-target="#create-kit-modal">
 					<i class="fa fa-plus" aria-hidden="true"></i> Add New
 				</button>
 			</th>
