--- a/site/templates/twig/items/upcx/bread-crumbs.twig
+++ b/site/templates/twig/items/upcx/bread-crumbs.twig
@@ -5,7 +5,7 @@
 {% block current_page %}
 	<li class="breadcrumb-item">
 		<i class="fa fa-list" aria-hidden="true"></i>
-		<a href="{{ page.menuUrl() }}">{{ page.menuTitle() }}</a>
+		<a href="{{ page.menuUrl() }}">INMAIN</a>
 	</li>
 
 	{% if values.offsetExists('upc') == false and values.offsetExists('itemID') == false  %}
