--- a/site/templates/twig/min/i2i/bread-crumbs.twig
+++ b/site/templates/twig/min/i2i/bread-crumbs.twig
@@ -4,6 +4,7 @@
 
 {% block current_page %}
 	<li class="breadcrumb-item">
+		<i class="fa fa-list" aria-hidden="true"></i>
 		<a href="{{ page.menuUrl() }}">
 			INMAIN
 		</a>
@@ -12,11 +13,11 @@
 	{% if values.offsetExists('parentID') and values.text('parentID') != 'new' %}
 		<li class="breadcrumb-item">
 			<a href="{{ page.xrefListFocusUrl(values.text('parentID'), values.text('childID')) }}">
-				ITMP
+				I2I
 			</a>
 		</li>
 		<li class="breadcrumb-item active" aria-current="page">{{ [values.text('parentID'), values.text('childID')]|join('-') }}</li>
 	{% else %}
-		<li class="breadcrumb-item active" aria-current="page">ITMP</li>
+		<li class="breadcrumb-item active" aria-current="page">I2I</li>
 	{% endif %}
 {% endblock %}
