--- a/site/templates/twig/min/inmain/i2i/xref/display.twig
+++ b/site/templates/twig/min/inmain/i2i/xref/display.twig
@@ -2,7 +2,7 @@
 	<div class="card-body">
 		<div class="row">
 			<div class="col-sm-6">
-				{% include 'min/i2i/xref/form.twig' %}
+				{% include 'min/inmain/i2i/xref/form.twig' %}
 			</div>
 		</div>
 	</div>
