--- a/site/templates/twig/code-tables/mar/spm/list/form.twig
+++ b/site/templates/twig/code-tables/mar/spm/list/form.twig
@@ -1,4 +1,4 @@
-<form action="{{ page.url }}" method="get" class="allow-enterkey-submit">
+<form action="{{ input.paginateUrl(1) }}" method="get" class="allow-enterkey-submit">
 	<div class="input-group form-group">
 		<input class="form-control form-group inline" type="text" name="q" value="{{ q }}" placeholder="Search ID, name, email, etc." autofocus>
 		<span class="input-group-btn">
@@ -9,7 +9,7 @@
 	</div>
 	{% if q %}
 		<div class="form-group">
-			<a href="{{ page.url }}" class="btn btn-warning">
+			<a href="{{ input.paginateUrl(1) }}" class="btn btn-warning">
 				<i class="fa fa-times" aria-hidden="true"></i> Clear Search
 			</a>
 		</div>
