--- a/site/templates/twig/code-tables/mar/spm/list/list.twig
+++ b/site/templates/twig/code-tables/mar/spm/list/list.twig
@@ -44,43 +44,43 @@
 		</tr>
 	</thead>
 	<tbody>
-		{% if people.count() == 0 %}
+		{% if reps.count() == 0 %}
 			<tr>
 				<td colspan="6" class="text-center bg-light">
-					<strong>Sales People Found</strong>
+					<strong>No Sales People Found</strong>
 				</td>
 			</tr>
 		{% endif %}
 
-		{% for person in people %}
-			<tr data-id="{{ person.id }}">
+		{% for rep in reps %}
+			<tr data-id="{{ rep.id }}">
 				<td>
-					{{ person.id }}
+					{{ rep.id }}
 				</td>
 				<td>
-					{{ person.name }}
+					{{ rep.name }}
 				</td>
 				<td>
-					{{ person.groupid }}
+					{{ rep.groupid }}
 				</td>
 				<td>
-					{{ person.lastsaledate ? person.lastsaledate|convertdate : '' }}
+					{{ rep.lastsaledate ? rep.lastsaledate|convertdate : '' }}
 				</td>
 				<td>
-					{{ person.userid }}
+					{{ rep.userid }}
 				</td>
 				<td class="text-center">
-					{% if spm.recordlocker.isLocked(person.id) == false or spm.recordlocker.userHasLocked(person.id) %}
-						<a href="{{ page.repEditUrl(person.id) }}" class="btn btn-warning btn-sm">
+					{% if spm.recordlocker.isLocked(rep.id) == false or spm.recordlocker.userHasLocked(rep.id) %}
+						<a href="{{ page.repEditUrl(rep.id) }}" class="btn btn-warning btn-sm">
 							<i class="fa fa-pencil" aria-hidden="true"></i> Edit
 						</a>
 						&nbsp; &nbsp;
-						<a href="{{ page.repDeleteUrl(person.id) }}" class="btn btn-danger btn-sm delete_button" data-delete="Sales Rep {{ person.id }}">
+						<a href="{{ page.repDeleteUrl(rep.id) }}" class="btn btn-danger btn-sm delete_button" data-delete="Sales Rep {{ rep.id }}">
 							<i class="fa fa-trash" aria-hidden="true"></i> Delete
 						</a>
 					{% else %}
 						<span class="badge badge-secondary">
-							<i class="fa fa-lock" aria-hidden="true"></i> Locked By {{ spm.recordlocker.getLockingUser(person.id) }}
+							<i class="fa fa-lock" aria-hidden="true"></i> Locked By {{ spm.recordlocker.getLockingUser(rep.id) }}
 						</span>
 					{% endif %}
 				</td>
