--- a/site/templates/twig/code-tables/mar/spm/rep/form/sales-figures.twig
+++ b/site/templates/twig/code-tables/mar/spm/rep/form/sales-figures.twig
@@ -23,11 +23,11 @@
 						{% include 'util/bootstrap/form/input.twig' with {
 								'input': {
 									'name': name, 'type': 'number',
-									'value': attribute(person, name)|number_format(spm.field_attribute(name, 'precision')),
+									'value': attribute(person, name)|number_format(spm.fieldAttribute(name, 'precision')),
 									'size': 'sm',
 									'attributes': {
-										'max': spm.field_attribute(name, 'max'),
-										'data-precision': spm.field_attribute(name, 'precision'),
+										'max': spm.fieldAttribute(name, 'max'),
+										'data-precision': spm.fieldAttribute(name, 'precision'),
 									},
 									'addclasses': [
 										'text-right',
