--- a/site/templates/twig/mar/armain/cmm/edit/form.twig
+++ b/site/templates/twig/mar/armain/cmm/edit/form.twig
@@ -13,7 +13,10 @@
 			{% include 'mar/armain/cmm/edit/form/taxes.twig' %}
 		</div>
 		<div class="col-sm-6">
-
+			<div class="mb-4">
+				{% include 'mar/armain/cmm/edit/form/ar-codes.twig' %}
+			</div>
+			{% include 'mar/armain/cmm/edit/form/ordering.twig' %}
 		</div>
 	</div>
 
