--- a/site/templates/twig/mar/armain/cmm/edit/form/phones.twig
+++ b/site/templates/twig/mar/armain/cmm/edit/form/phones.twig
@@ -5,7 +5,7 @@
 	<div class="col-sm-9">
 		{% include 'util/bootstrap/form/input.twig' with {
 				'input': {
-					'address1': 'phone',
+					'name': 'phone',
 					'value': customer.phone,
 					'size': 'sm',
 					'addclasses': ['phone-input']
@@ -21,7 +21,7 @@
 	<div class="col-sm-9">
 		{% include 'util/bootstrap/form/input.twig' with {
 				'input': {
-					'address1': 'fax',
+					'name': 'fax',
 					'value': customer.fax,
 					'size': 'sm',
 					'addclasses': ['phone-input']
