--- a/site/templates/twig/mar/armain/cmm/edit/form/taxes.twig
+++ b/site/templates/twig/mar/armain/cmm/edit/form/taxes.twig
@@ -31,7 +31,7 @@
 		%}
 	</div>
 	<div class="col-sm-5">
-		<p class="form-control-plaintext form-control-sm text-muted taxcode-desc">sdf</p>
+		<p class="form-control-plaintext form-control-sm text-muted taxcode-desc">{{ cmm.descriptionTaxcode(customer.taxcode) }}</p>
 	</div>
 </div>
 
