--- a/site/templates/twig/mar/armain/cmm/edit/form/salesreps.twig
+++ b/site/templates/twig/mar/armain/cmm/edit/form/salesreps.twig
@@ -8,7 +8,7 @@
 					'label': '1',
 					'name': 'salesperson1',
 					'value': customer.salesperson1,
-					'salesrepname': 'sdf'
+					'salesrepname': cmm.descriptionSalesperson(customer.salesperson1)
 				}
 			%}
 		</div>
@@ -17,7 +17,7 @@
 					'label': '2',
 					'name': 'salesperson2',
 					'value': customer.salesperson2,
-					'salesrepname': 'sdf'
+					'salesrepname': cmm.descriptionSalesperson(customer.salesperson2)
 				}
 			%}
 		</div>
@@ -26,7 +26,7 @@
 					'label': '3',
 					'name': 'salesperson3',
 					'value': customer.salesperson3,
-					'salesrepname': 'sdf'
+					'salesrepname': cmm.descriptionSalesperson(customer.salesperson3)
 				}
 			%}
 		</div>
