FEAT: ADD AJAX update of code descriptions

--- a/site/templates/twig/mar/armain/cmm/edit/form/address.twig
+++ b/site/templates/twig/mar/armain/cmm/edit/form/address.twig
@@ -122,7 +122,8 @@
 						'attributes': {
 							'placeholder': '',
 							'aria-label':  'Country',
-							'data-jqv': 'true'
+							'data-jqv': 'true',
+							'data-describedby': '.country-name'
 						}
 					},
 					'button': {
