--- a/site/templates/twig/mar/armain/cmm/edit/form/ar-code.twig
+++ b/site/templates/twig/mar/armain/cmm/edit/form/ar-code.twig
@@ -12,7 +12,8 @@
 						'value': value,
 						'attributes': {
 							'placeholder': '',
-							'aria-label':  label
+							'aria-label':  label,
+							'data-jqv': 'true',
 						}
 					},
 					'button': {
