--- a/site/templates/twig/mar/armain/cmm/edit/form/ar-codes.twig
+++ b/site/templates/twig/mar/armain/cmm/edit/form/ar-codes.twig
@@ -37,7 +37,7 @@
 <div class="mb-2">
 	{% include 'mar/armain/cmm/edit/form/ar-code.twig' with {
 			'label': 'Comm Code',
-			'name': 'commission',
+			'name': 'commcode',
 			'value': customer.commcode,
 			'description': cmm.descriptionCommcode(customer.commcode),
 			'searchTitleDescription': 'Commission Codes',
