--- a/site/templates/twig/mar/armain/cmm/edit/.js.twig
+++ b/site/templates/twig/mar/armain/cmm/edit/.js.twig
@@ -1,13 +1,160 @@
+{% include 'mar/armain/cmm/edit/js/classes.js.twig' %}
+
 $(function() {
 	var ajaxModal = $('#ajax-modal');
+	var server   = CmmRequests.getInstance();
+	var alert    = CmmAlerts.getInstance();
+	var formCode = CmmForm.getInstance();
 
 /* =============================================================
 	Event Functions
 ============================================================= */
 	$("body").on("focusin", "#cmm-form input:not(input[name=custID])", function(e) {
-		// if (formCode.inputs.code.val() == '') {
-		// 	formCode.inputs.code.focus();
-		// }
+		if (formCode.inputs.custid.val() == '') {
+			formCode.inputs.custid.focus();
+		}
+	});
+
+	$("body").on("change", "input[name=country]", function(e) {
+		var input = $(this);
+		var code  = input.val();
+
+		if (code == '') {
+			return false;
+		}
+
+		server.getCountryCode(code, function(country) {
+			$(input.data('describedby')).text('');
+
+			if (country) {
+				$(input.data('describedby')).text(country.name)
+			}
+		});
+	});
+
+	$("body").on("change", "input.whseid", function(e) {
+		var input = $(this);
+		var id    = input.val();
+
+		if (id == '') {
+			return false;
+		}
+
+		server.getWarehouse(id, function(whse) {
+			var description = input.closest('.whse').find('.whse-name');
+			description.text('');
+
+			if (whse) {
+				description.text(whse.name)
+			}
+		});
+	});
+
+	$("body").on("change", "input.salesrepid", function(e) {
+		var input = $(this);
+		var id    = input.val();
+
+		if (id == '') {
+			return false;
+		}
+
+		server.getSalesperson(id, function(rep) {
+			var description = input.closest('.salesrep').find('.salesrep-name');
+			description.text('');
+
+			if (rep) {
+				description.text(rep.name)
+			}
+		});
+	});
+
+	$("body").on("change", "input[name=taxcode]", function(e) {
+		var input = $(this);
+		var code  = input.val();
+
+		if (code == '') {
+			return false;
+		}
+
+		server.getTaxCode(code, function(taxcode) {
+			$(input.data('describedby')).text('');
+
+			if (taxcode) {
+				$(input.data('describedby')).text(taxcode.description)
+			}
+		});
+	});
+
+	$("body").on("change", "input[name=termscode]", function(e) {
+		var input = $(this);
+		var code  = input.val();
+
+		if (code == '') {
+			return false;
+		}
+
+		server.getTermsCode(code, function(arcode) {
+			var description = input.closest('.ar-code').find('.description');
+			description.text('');
+
+			if (arcode) {
+				description.text(arcode.description)
+			}
+		});
+	});
+
+	$("body").on("change", "input[name=shipviacode]", function(e) {
+		var input = $(this);
+		var code  = input.val();
+
+		if (code == '') {
+			return false;
+		}
+
+		server.getShipviaCode(code, function(arcode) {
+			var description = input.closest('.ar-code').find('.description');
+			description.text('');
+
+			if (arcode) {
+				description.text(arcode.description)
+			}
+		});
+	});
+
+	$("body").on("change", "input[name=pricecode]", function(e) {
+		var input = $(this);
+		var code  = input.val();
+
+		if (code == '') {
+			return false;
+		}
+
+		server.getPriceCode(code, function(arcode) {
+			var description = input.closest('.ar-code').find('.description');
+			description.text('');
+
+			if (arcode) {
+				description.text(arcode.description)
+			}
+		});
+	});
+
+	$("body").on("change", "input[name=commcode]", function(e) {
+		var input = $(this);
+		var code  = input.val();
+
+		if (code == '') {
+			return false;
+		}
+
+		server.getCommCode(code, function(arcode) {
+			var description = input.closest('.ar-code').find('.description');
+			description.text('');
+
+			if (arcode) {
+				description.text(arcode.description)
+			}
+		});
 	});
 
 /* =============================================================
@@ -52,7 +199,7 @@ $(function() {
 		var button = $(this);
 		var modal  = button.closest('.modal');
 		var input  = $(modal.attr('data-input'));
-		input.val(button.data('code'));
+		input.val(button.data('whseid'));
 		if (input.data('jqv')) {
 			input.change();
 		}
