--- a/site/templates/twig/mar/armain/cmm/edit/form/warehouse.twig
+++ b/site/templates/twig/mar/armain/cmm/edit/form/warehouse.twig
@@ -10,9 +10,11 @@
 					'input': {
 						'name': name,
 						'value': value,
+						'addclasses': ['whseid'],
 						'attributes': {
 							'placeholder': '',
-							'aria-label':  label
+							'aria-label':  label,
+							'data-jqv': 'true'
 						}
 					},
 					'button': {
