--- a/site/templates/twig/mar/armain/cmm/edit/js/classes/Configs.js.twig
+++ b/site/templates/twig/mar/armain/cmm/edit/js/classes/Configs.js.twig
@@ -10,7 +10,7 @@ class CmmConfigs {
 
 	constructor() {
 		this.fields = {
-			code: {
+			custid: {
 				maxlength: {{ cmm.fieldAttribute('id', 'maxlength') }}
 			},
 			name: {
